# ndpa

./: .env.example  .gitignore  .vercelignore  AGENTS.md  CONTRIBUTING.md  NDPA_GOALS.md  NOTES.md  README.md  cli.py  install.py  pyproject.toml  requirements.txt  vercel.json
api/: index.py
collector/: hook.py  inject.py
demo/: demo.py
docs/: ARCHITECTURE.md  BENCHMARK_SPLITS.md  COMPARISON.md  INTEGRATION.md  LAUNCH.md  PQHR.md  PQHR_LEADERBOARD.md  PRICING.md  SCALING.md  SECURITY.md  SUPABASE_SETUP.md  TIERED_STORAGE.md  USE_CASES.md  VERCEL_DEPLOY.md  VOICE_AI.md
eval/: __init__.py  baseline.py  chatgpt_import.py  compare_latency.py  competitor_pqhr.py  competitor_pqhr_results.json  conversation_eval.py  e2e_failure_audit.json  e2e_failure_audit.py  e2e_failure_audit_rerun.json  external_benchmark_utils.py  harness.py  held_out_future_eval.py  hydration_microbench.py  hydration_microbench_results.json  latency_results.json  llm_judge_regrade.py  lmsys_results.json  lmsys_validation.py  locomo_results.json  locomo_runner.py  longmemeval_e2e_rerun_results.json  longmemeval_e2e_results.json  longmemeval_e2e_runner.py  longmemeval_e2e_smoke_results.json  longmemeval_reasoning_full500_v13_blank_repair_results.json  longmemeval_reasoning_full500_v13_gpt5mini_results.json  longmemeval_reasoning_full500_v13_repaired_results.json  longmemeval_reasoning_keycheck_results.json  longmemeval_reasoning_multisession15_v11_gpt5mini_results.json  longmemeval_reasoning_multisession15_v9_gpt5mini_results.json  longmemeval_reasoning_multisession30_v12_gpt5mini_results.json  longmemeval_reasoning_multisession30_v13_gpt5mini_results.json  longmemeval_reasoning_multisession5_v10_gpt5mini_results.json  longmemeval_reasoning_multisession5_v11_gpt5mini_results.json  longmemeval_reasoning_preference3_v12_gpt5mini_results.json  longmemeval_reasoning_preference3_v13_gpt5mini_results.json  longmemeval_reasoning_preference5_repair_v2_results.json  longmemeval_reasoning_preference5_v4_results.json  longmemeval_reasoning_preference5_v5_results.json  (+35 more)
integrations/: README.md  anthropic_messages.py  langchain_memory.py  openai_chat.py
kernel/: __init__.py  predictor.py
ndp/: __init__.py  bundle.py  (+8 more)
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: basic.py
sdk/python/ndpa/: __init__.py  client.py
(+32 files in other folders)
