[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ndpa"
version = "0.1.0"
description = "Predictive memory layer for AI — stop retrieving, start predicting."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Kace Burnette" }]
keywords = ["ai", "memory", "llm", "context", "prediction", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/kaceburnette/ndp"
Repository = "https://github.com/kaceburnette/ndp"

[tool.hatch.build.targets.wheel]
packages = ["ndpa"]
