[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ndpa"
version = "0.2.0"
description = "Token prediction for the data layer. Predictive memory for AI assistants."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Kace Burnette" }]
keywords = ["ai", "memory", "llm", "context", "prediction", "agents", "rag", "retrieval"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/kaceburnette/ndpa"
Repository = "https://github.com/kaceburnette/ndpa"
Documentation = "https://github.com/kaceburnette/ndpa#readme"
"Bug Tracker" = "https://github.com/kaceburnette/ndpa/issues"

[tool.hatch.build.targets.wheel]
packages = ["ndpa"]
